# portmidi

./: CHANGELOG.txt  CMakeLists.txt  Doxyfile  PortMIDIConfig.cmake.in  README.txt  license.txt
.github/workflows/: build.yml
bindings/: README.txt
packaging/: PortMidiConfig.cmake.in  portmidi.pc.in
src/portmidi/freebsd/: pmfreebsd.c  pmfreebsd.h  pmfreebsdsndio.c  pmfreebsdsndio.h
src/portmidi/linux/: pmlinux.c
src/porttime/: ptlinux.c
test/: CMakeLists.txt
